<resources>
    <string name="app_name">Second Brain</string>
    <string name="title_home">Home</string>
    <string name="title_note">Notes</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="title_capture">Capture</string>
    <string name="celestial_d">
    Celestial Developer
    </string>
    <string name="welcome_bac">
    welcome Back !
    </string>
    <string name="masuk">
    Sign In
    </string>
    <string name="buat_akun">
    Sign Up
    </string>
    <string name="we_assist_y">
    We assist you in :
    </string>
    <string name="taking_note">
    Taking notes
    </string>
    <string name="managing_yo">
    Managing your Notes
    </string>
    <string name="reminding_y">
    Reminding you of your tasks
    </string>
    <string name="create_your">
    Create your new account!
    </string>
    <string name="learn_more_">
    Learn more about Second Brain, C.O.D.E and P.A.R.A!
    </string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
</resources>