<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_note"
        android:icon="@drawable/baseline_notes_24"
        android:title="@string/title_note" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />
    


</menu>